--- a/catalogue-item.html
+++ b/catalogue-item.html
@@ -30,7 +30,7 @@
 					</ul>
 				</nav>
 				<div class="user-block">
-					<a class="login" href="#">Вход</a>  
+					<a class="login" href="#">Вход</a>
 				</div>
 			</div>
 		</header>
@@ -38,28 +38,30 @@
 			<header class="inner-page-header">  
 				<h1>Набор для путешествий «Baxter of California»</h1>
 				<div class="breadcrumbs">
-					<a href="#">Главная</a>
-					<a href="#">Магазин</a>
-					<a href="#">Средства для ухода</a>
-					Набор для путешествий «Baxter of California»
+					<ul>
+						<li>
+							<a href="#">Главная</a>
+						</li>
+						<li>
+							<a href="#">Магазин</a>
+						</li>
+						<li>
+							<a href="#">Средства для ухода</a>
+						</li>
+						<li>
+							Набор для путешествий «Baxter of California»
+						</li>
+					</ul>
 				</div>
 			</header>
 			<div class="page-content">
 				<div class="item-photo-gallery">
-					<div class="big">
-						<img src="http://placehold.it/460x498" width="460" height="498" alt="Полный набор. 2">
-					</div>
-					<ul class="previews">
-						<li>
-							<img src="http://placehold.it/140x149" width="140" height="149" alt="Полный набор. 1">
-						</li>
-						<li>
-							<img src="http://placehold.it/140x149" width="140" height="149" alt="Сумка">
-						</li>
-						<li>
-							<img src="http://placehold.it/140x149" width="140" height="149" alt="Полный набор. 2">
-						</li>
-					</ul>
+					<figure>
+						<img class="big" src="http://placehold.it/460x498" width="460" height="498" alt="Полный набор. 2">
+						<img class="preview" src="http://placehold.it/140x149" width="140" height="149" alt="Полный набор. 1">
+						<img class="preview" src="http://placehold.it/140x149" width="140" height="149" alt="Сумка">
+						<img class="preview" src="http://placehold.it/140x149" width="140" height="149" alt="Полный набор. 2">						
+					</figure>
 				</div>
 				<div class="item-main-block">
 					<section class="description">
