Подготовка графики и текстовых стилей «Барбершопа»

--- a/catalogue-item.html
+++ b/catalogue-item.html
@@ -3,12 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Барбершоп «Бородинский»</title>
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header">
 			<div class="container">
 				<div class="inner-logo">
-					<img src="http://placehold.it/111x24" width="111" height="24" alt="Барбершоп «Бородинский»">
+					<a href="index.html">
+						<img src="http://placehold.it/111x24" width="111" height="24" alt="Барбершоп «Бородинский»">
+					</a>
 				</div>
 				<nav class="main-navigation">
 					<ul>
@@ -46,7 +49,7 @@
 							<a href="#">Магазин</a>
 						</li>
 						<li>
-							<a href="#">Средства для ухода</a>
+							<a href="catalogue.html">Средства для ухода</a>
 						</li>
 						<li>
 							Набор для путешествий «Baxter of California»
@@ -57,10 +60,10 @@
 			<div class="page-content">
 				<div class="item-photo-gallery">
 					<figure>
-						<img class="big" src="http://placehold.it/460x498" width="460" height="498" alt="Полный набор. 2">
-						<img class="preview" src="http://placehold.it/140x149" width="140" height="149" alt="Полный набор. 1">
-						<img class="preview" src="http://placehold.it/140x149" width="140" height="149" alt="Сумка">
-						<img class="preview" src="http://placehold.it/140x149" width="140" height="149" alt="Полный набор. 2">						
+						<img class="big" src="img/item-photo-3.jpg" width="460" height="498" alt="Полный набор. 2">
+						<img class="preview" src="img/item-photo-preview-1.jpg" width="140" height="149" alt="Полный набор. 1">
+						<img class="preview" src="img/item-photo-preview-2.jpg" width="140" height="149" alt="Сумка">
+						<img class="preview" src="img/item-photo-preview-3.jpg" width="140" height="149" alt="Полный набор. 2">						
 					</figure>
 				</div>
 				<div class="item-main-block">
