--- a/catalogue.html
+++ b/catalogue.html
@@ -3,12 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Барбершоп «Бородинский»</title>
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header">
 			<div class="container">
 				<div class="inner-logo">
-					<img src="http://placehold.it/111x24" width="111" height="24" alt="Барбершоп «Бородинский»">
+					<a href="index.html">
+						<img src="http://placehold.it/111x24" width="111" height="24" alt="Барбершоп «Бородинский»">
+					</a>
 				</div>
 				<nav class="main-navigation">
 					<ul>
@@ -76,7 +79,7 @@
 				<div class="page-content-right">
 					<section class="shop-list">
 						<article class="shop-item">
-							<img src="http://placehold.it/220x165" width="220" height="165" alt="Набор для путешествий"> 
+							<img src="img/shop-item-preview-1.jpg" width="220" height="165" alt="Набор для путешествий"> 
 							<p class="item-name">Набор для путешествий <span>«Baxter of California»</span></p>
 							<section class="buy-block">
 								<div class="price">2 900 руб.</div>
@@ -84,7 +87,7 @@
 							</section>
 						</article>
 						<article class="shop-item">
-							<img src="http://placehold.it/220x165" width="220" height="165" alt="Увлажняющий кондиционер"> 
+							<img src="img/shop-item-preview-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер"> 
 							<p class="item-name">Увлажняющий кондиционер <span>«Baxter of California»</span></p>
 							<section class="buy-block">
 								<div class="price">750 руб.</div>
@@ -92,7 +95,7 @@
 							</section>
 						</article>
 						<article class="shop-item">
-							<img src="http://placehold.it/220x165" width="220" height="165" alt="Гель для волос"> 
+							<img src="img/shop-item-preview-3.jpg" width="220" height="165" alt="Гель для волос"> 
 							<p class="item-name">Гель для волос <span>«Suavecito»</span></p>
 							<section class="buy-block">
 								<div class="price">290 руб.</div>
@@ -100,7 +103,7 @@
 							</section>
 						</article>
 						<article class="shop-item">
-							<img src="http://placehold.it/220x165" width="220" height="165" alt="Глина для укладки волос"> 
+							<img src="img/shop-item-preview-4.jpg" width="220" height="165" alt="Глина для укладки волос"> 
 							<p class="item-name">Глина для укладки волос <span>«American Crew»</span></p>
 							<section class="buy-block">
 								<div class="price">500 руб.</div>
@@ -108,7 +111,7 @@
 							</section>
 						</article>
 						<article class="shop-item">
-							<img src="http://placehold.it/220x165" width="220" height="165" alt="Гель для волос"> 
+							<img src="img/shop-item-preview-5.jpg" width="220" height="165" alt="Гель для волос"> 
 							<p class="item-name">Гель для волос <span>«American Crew»</span></p>
 							<section class="buy-block">
 								<div class="price">300 руб.</div>
@@ -116,7 +119,7 @@
 							</section>
 						</article>
 						<article class="shop-item">
-							<img src="http://placehold.it/220x165" width="220" height="165" alt="Набор для бритья"> 
+							<img src="img/shop-item-preview-6.jpg" width="220" height="165" alt="Набор для бритья"> 
 							<p class="item-name">Набор для бритья <span>«Baxter of California»</span></p>
 							<section class="buy-block">
 								<div class="price">3 900 руб.</div>
