--- a/catalogue.html
+++ b/catalogue.html
@@ -5,16 +5,16 @@
 		<title>Барбершоп «Бородинский»</title>
 		<link href="css/style.css" rel="stylesheet">
 	</head>
-	<body>
+	<body class="catalogue-page">
 		<header class="main-header">
-			<div class="container">
+			<div class="container clearfix">
 				<div class="inner-logo">
-					<a href="index.html">
+<!-- 					<a href="index.html">
 						<img src="http://placehold.it/111x24" width="111" height="24" alt="Барбершоп «Бородинский»">
-					</a>
+					</a> -->
 				</div>
 				<nav class="main-navigation">
-					<ul>
+<!-- 					<ul>
 						<li>
 							<a href="#">Информация</a>
 						</li>
@@ -30,105 +30,107 @@
 						<li>
 							<a href="#">Контакты</a>
 						</li>
-					</ul>
+					</ul> -->
 				</nav>
 				<div class="user-block">
-					<a class="login" href="#">Вход</a>  
+<!-- 					<a class="login" href="#">Вход</a>   -->
 				</div>
 			</div>
 		</header>
 		<main class="container">
 			<header class="inner-page-header">  
-				<h1>Средства для ухода</h1>
-				<div class="breadcrumbs">
-					<ul>
-						<li>
-							<a href="#">Главная</a>
-						</li>
-						<li>
-							<a href="#">Магазин</a>
-						</li>
-						<li>
-							Средства для ухода
-						</li>
-					</ul>
-				</div>
+<!-- 				<h1>Средства для ухода</h1>
+				<ul class="breadcrumbs">
+					<li>
+						<a href="#">Главная</a>
+					</li>
+					<li>
+						<a href="#">Магазин</a>
+					</li>
+					<li>
+						Средства для ухода
+					</li>
+				</ul> -->
 			</header>
-			<div class="page-content">
+			<div class="page-content clearfix">
 				<div class="page-content-left">
 					<div class="filters">
 						<form action="shop.html" method="post">
-							<span>Производители:</span>
-							<input type="checkbox" id="baxter-field" name="baxter" checked>
-							<label for="baxter-field">Baxter of California</label>
-							<input type="checkbox" id="natty-field" name="natty">
-							<label for="natty-field">Mr Natty</label>
-							<input type="checkbox" id="suavecito-field" name="suavecito" checked>
-							<label for="suavecito-field">Suavecito</label>
-							<input type="checkbox" id="malin-field" name="malin">
-							<label for="malin-field">Malin+Goetz</label>
-							<input type="checkbox" id="murrays-field" name="murrays">
-							<label for="murrays-field">Murray's</label>
-							<input type="checkbox" id="americancrew-field" name="americancrew" checked>
-							<label for="americancrew-field">American Crew</label>
-							<span>Группы товаров:</span>
+<!-- 							<fieldset>
+								<legend>Производители:</legend>
+								<input type="checkbox" id="baxter-field" name="baxter" checked>
+								<label for="baxter-field">Baxter of California</label>
+								<input type="checkbox" id="natty-field" name="natty">
+								<label for="natty-field">Mr Natty</label>
+								<input type="checkbox" id="suavecito-field" name="suavecito" checked>
+								<label for="suavecito-field">Suavecito</label>
+								<input type="checkbox" id="malin-field" name="malin">
+								<label for="malin-field">Malin+Goetz</label>
+								<input type="checkbox" id="murrays-field" name="murrays">
+								<label for="murrays-field">Murray's</label>
+								<input type="checkbox" id="americancrew-field" name="americancrew" checked>
+								<label for="americancrew-field">American Crew</label>	
+							</fieldset>
+							<fieldset>
+								<legend>Группы товаров:</legend>
+							</fieldset>
 							<button type="submit">Показать</button>
-						</form>	
+						</form> -->	
 					</div>
 				</div>
 				<div class="page-content-right">
-					<section class="shop-list">
+					<section class="shop-list clearfix">
 						<article class="shop-item">
-							<img src="img/shop-item-preview-1.jpg" width="220" height="165" alt="Набор для путешествий"> 
+<!-- 							<img src="img/shop-item-preview-1.jpg" width="220" height="165" alt="Набор для путешествий"> 
 							<p class="item-name">Набор для путешествий <span>«Baxter of California»</span></p>
 							<section class="buy-block">
 								<div class="price">2 900 руб.</div>
 								<a href="#" class="btn">Купить</a>
-							</section>
+							</section> -->
 						</article>
 						<article class="shop-item">
-							<img src="img/shop-item-preview-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер"> 
+<!-- 							<img src="img/shop-item-preview-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер"> 
 							<p class="item-name">Увлажняющий кондиционер <span>«Baxter of California»</span></p>
 							<section class="buy-block">
 								<div class="price">750 руб.</div>
 								<a href="#" class="btn">Купить</a>
-							</section>
+							</section> -->
 						</article>
 						<article class="shop-item">
-							<img src="img/shop-item-preview-3.jpg" width="220" height="165" alt="Гель для волос"> 
+<!-- 							<img src="img/shop-item-preview-3.jpg" width="220" height="165" alt="Гель для волос"> 
 							<p class="item-name">Гель для волос <span>«Suavecito»</span></p>
 							<section class="buy-block">
 								<div class="price">290 руб.</div>
 								<a href="#" class="btn">Купить</a>
-							</section>
+							</section> -->
 						</article>
 						<article class="shop-item">
-							<img src="img/shop-item-preview-4.jpg" width="220" height="165" alt="Глина для укладки волос"> 
+<!-- 							<img src="img/shop-item-preview-4.jpg" width="220" height="165" alt="Глина для укладки волос"> 
 							<p class="item-name">Глина для укладки волос <span>«American Crew»</span></p>
 							<section class="buy-block">
 								<div class="price">500 руб.</div>
 								<a href="#" class="btn">Купить</a>
-							</section>
+							</section> -->
 						</article>
 						<article class="shop-item">
-							<img src="img/shop-item-preview-5.jpg" width="220" height="165" alt="Гель для волос"> 
+<!-- 							<img src="img/shop-item-preview-5.jpg" width="220" height="165" alt="Гель для волос"> 
 							<p class="item-name">Гель для волос <span>«American Crew»</span></p>
 							<section class="buy-block">
 								<div class="price">300 руб.</div>
 								<a href="#" class="btn">Купить</a>
-							</section>
+							</section> -->
 						</article>
 						<article class="shop-item">
-							<img src="img/shop-item-preview-6.jpg" width="220" height="165" alt="Набор для бритья"> 
+<!-- 							<img src="img/shop-item-preview-6.jpg" width="220" height="165" alt="Набор для бритья"> 
 							<p class="item-name">Набор для бритья <span>«Baxter of California»</span></p>
 							<section class="buy-block">
 								<div class="price">3 900 руб.</div>
 								<a href="#" class="btn">Купить</a>
-							</section>
+							</section> -->
 						</article>
 					</section>
 					<section class="pagination">
-						<ul>
+<!-- 						<ul>
 							<li>
 								<a href="#">1</a>
 							</li>
@@ -141,28 +143,28 @@
 							<li>
 								<a href="#">4</a>
 							</li>
-						</ul>
+						</ul> -->
 					</section>  
 				</div>  
 			</div>	
 		</main>
 		<footer class="main-footer">
-			<div class="container">
+			<div class="container clearfix">
 				<section class="footer-contacts">
-					Барбершоп «Бородинский»<br>
+<!-- 					Барбершоп «Бородинский»<br>
 					Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
 					<a href="#">Как нас найти?</a><br>
-					Телефон: +7 (812) 666-02-66
+					Телефон: +7 (812) 666-02-66 -->
 				</section>
 				<section class="footer-social">
-					<p>Давайте дружить!</p>
+<!-- 					<p>Давайте дружить!</p>
 					<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
 					<a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-					<a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+					<a class="social-btn social-btn-inst" href="#">Инстаграм</a> -->
 				</section>
 				<section class="footer-copyright">
-					<p>Разработано:</p>
-					<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+<!-- 					<p>Разработано:</p>
+					<a class="btn" href="https://htmlacademy.ru">HTML Academy</a> -->
 				</section>
 			</div>
 		</footer> 
