--- a/catalogue-item.html
+++ b/catalogue-item.html
@@ -5,16 +5,16 @@
 		<title>Барбершоп «Бородинский»</title>
 		<link href="css/style.css" rel="stylesheet">
 	</head>
-	<body class="catalogue-item-page">
+	<body>
 		<header class="main-header">
 			<div class="container clearfix">
 				<div class="inner-logo">
-<!-- 					<a href="index.html">
-						<img src="http://placehold.it/111x24" width="111" height="24" alt="Барбершоп «Бородинский»">
-					</a> -->
+					<a href="index.html">
+						<img src="img/logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
+					</a>
 				</div>
 				<nav class="main-navigation">
-<!-- 					<ul>
+					<ul>
 						<li>
 							<a href="#">Информация</a>
 						</li>
@@ -30,16 +30,16 @@
 						<li>
 							<a href="#">Контакты</a>
 						</li>
-					</ul> -->
+					</ul>
 				</nav>
 				<div class="user-block">
-					<!-- <a class="login" href="#">Вход</a> -->
+					<a class="login" href="#">Вход</a>
 				</div>
 			</div>
 		</header>
 		<main class="container clearfix">
 			<header class="inner-page-header">  
-<!-- 				<h1>Набор для путешествий «Baxter of California»</h1>
+				<h1>Набор для путешествий «Baxter of California»</h1>
 				<div class="breadcrumbs">
 					<ul>
 						<li>
@@ -55,7 +55,7 @@
 							Набор для путешествий «Baxter of California»
 						</li>
 					</ul>
-				</div> -->
+				</div>
 			</header>
 			<div class="page-content">
 				<div class="item-photo-gallery">
@@ -68,23 +68,23 @@
 				</div>
 				<div class="item-main-block">
 					<section class="description">
-<!-- 						<div class="availability">Есть в наличии</div>
+						<div class="availability">Есть в наличии</div>
 						<div class="articul">Артикул: dexter-ae</div>
-						<p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p> -->
+						<p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
 					</section>
 					<section class="buy-block">
-<!-- 						<div class="price">2 900 руб.</div>
-						<a href="#" class="btn">Купить</a> -->
+						<div class="price">2 900 руб.</div>
+						<a href="#" class="btn">Купить</a>
 					</section>
 					<section class="set-parts">
-<!-- 						<p>В набор входят:</p>
+						<p>В набор входят:</p>
 						<ul>
 							<li>Средство для умывания (50 мл)</li>
 							<li>Увлажняющий крем (50 мл)</li>
 							<li>Крем для бритья (50 мл)</li>
 							<li>Крем после бритья, шампунь (50 мл)</li>
 							<li>Удобная кожаная косметичка</li>
-						</ul> -->
+						</ul>
 					</section>
 				</div>
 			</div>	
@@ -92,20 +92,20 @@
 		<footer class="main-footer">
 			<div class="container clearfix">
 				<section class="footer-contacts">
-<!-- 					Барбершоп «Бородинский»<br>
+					Барбершоп «Бородинский»<br>
 					Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
 					<a href="#">Как нас найти?</a><br>
-					Телефон: +7 (812) 666-02-66 -->
+					Телефон: +7 (812) 666-02-66
 				</section>
 				<section class="footer-social">
-<!-- 					<p>Давайте дружить!</p>
+					<p>Давайте дружить!</p>
 					<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
 					<a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-					<a class="social-btn social-btn-inst" href="#">Инстаграм</a> -->
+					<a class="social-btn social-btn-inst" href="#">Инстаграм</a>
 				</section>
 				<section class="footer-copyright">
-<!-- 					<p>Разработано:</p>
-					<a class="btn" href="https://htmlacademy.ru">HTML Academy</a> -->
+					<p>Разработано:</p>
+					<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
 				</section>
 			</div>
 		</footer> 
