--- a/catalogue.html
+++ b/catalogue.html
@@ -5,16 +5,16 @@
 		<title>Барбершоп «Бородинский»</title>
 		<link href="css/style.css" rel="stylesheet">
 	</head>
-	<body class="catalogue-page">
+	<body>
 		<header class="main-header">
 			<div class="container clearfix">
 				<div class="inner-logo">
-<!-- 					<a href="index.html">
-						<img src="http://placehold.it/111x24" width="111" height="24" alt="Барбершоп «Бородинский»">
-					</a> -->
+					<a href="index.html">
+						<img src="img/logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
+					</a>
 				</div>
 				<nav class="main-navigation">
-<!-- 					<ul>
+					<ul>
 						<li>
 							<a href="#">Информация</a>
 						</li>
@@ -30,16 +30,16 @@
 						<li>
 							<a href="#">Контакты</a>
 						</li>
-					</ul> -->
+					</ul>
 				</nav>
 				<div class="user-block">
-<!-- 					<a class="login" href="#">Вход</a>   -->
+					<a class="login" href="#">Вход</a>
 				</div>
 			</div>
 		</header>
 		<main class="container">
 			<header class="inner-page-header">  
-<!-- 				<h1>Средства для ухода</h1>
+				<h1>Средства для ухода</h1>
 				<ul class="breadcrumbs">
 					<li>
 						<a href="#">Главная</a>
@@ -50,13 +50,13 @@
 					<li>
 						Средства для ухода
 					</li>
-				</ul> -->
+				</ul>
 			</header>
 			<div class="page-content clearfix">
 				<div class="page-content-left">
 					<div class="filters">
 						<form action="shop.html" method="post">
-<!-- 							<fieldset>
+							<fieldset>
 								<legend>Производители:</legend>
 								<input type="checkbox" id="baxter-field" name="baxter" checked>
 								<label for="baxter-field">Baxter of California</label>
@@ -75,62 +75,74 @@
 								<legend>Группы товаров:</legend>
 							</fieldset>
 							<button type="submit">Показать</button>
-						</form> -->	
+						</form>	
 					</div>
 				</div>
 				<div class="page-content-right">
 					<section class="shop-list clearfix">
 						<article class="shop-item">
-<!-- 							<img src="img/shop-item-preview-1.jpg" width="220" height="165" alt="Набор для путешествий"> 
-							<p class="item-name">Набор для путешествий <span>«Baxter of California»</span></p>
+							<a href="#">
+								<img src="img/shop-item-preview-1.jpg" width="220" height="165" alt="Набор для путешествий"> 
+							</a>
+							<a class="item-name" href="#">Набор для путешествий <span>«Baxter of California»</span></a>
 							<section class="buy-block">
 								<div class="price">2 900 руб.</div>
 								<a href="#" class="btn">Купить</a>
-							</section> -->
+							</section>
 						</article>
 						<article class="shop-item">
-<!-- 							<img src="img/shop-item-preview-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер"> 
-							<p class="item-name">Увлажняющий кондиционер <span>«Baxter of California»</span></p>
+							<a href="#">
+								<img src="img/shop-item-preview-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер"> 	
+							</a>
+							<a class="item-name" href="#">Увлажняющий кондиционер <span>«Baxter of California»</span></a>
 							<section class="buy-block">
 								<div class="price">750 руб.</div>
 								<a href="#" class="btn">Купить</a>
-							</section> -->
+							</section>
 						</article>
 						<article class="shop-item">
-<!-- 							<img src="img/shop-item-preview-3.jpg" width="220" height="165" alt="Гель для волос"> 
-							<p class="item-name">Гель для волос <span>«Suavecito»</span></p>
+							<a href="#">
+								<img src="img/shop-item-preview-3.jpg" width="220" height="165" alt="Гель для волос"> 								
+							</a>
+							<a class="item-name" href="#">Гель для волос <span>«Suavecito»</span></a>
 							<section class="buy-block">
 								<div class="price">290 руб.</div>
 								<a href="#" class="btn">Купить</a>
-							</section> -->
+							</section>
 						</article>
 						<article class="shop-item">
-<!-- 							<img src="img/shop-item-preview-4.jpg" width="220" height="165" alt="Глина для укладки волос"> 
-							<p class="item-name">Глина для укладки волос <span>«American Crew»</span></p>
+							<a href="#">
+								<img src="img/shop-item-preview-4.jpg" width="220" height="165" alt="Глина для укладки волос"> 								
+							</a>
+							<a class="item-name" href="#">Глина для укладки волос <span>«American Crew»</span></a>
 							<section class="buy-block">
 								<div class="price">500 руб.</div>
 								<a href="#" class="btn">Купить</a>
-							</section> -->
+							</section>
 						</article>
 						<article class="shop-item">
-<!-- 							<img src="img/shop-item-preview-5.jpg" width="220" height="165" alt="Гель для волос"> 
-							<p class="item-name">Гель для волос <span>«American Crew»</span></p>
+							<a href="#">
+								<img src="img/shop-item-preview-5.jpg" width="220" height="165" alt="Гель для волос"> 								
+							</a>
+							<a class="item-name" href="#">Гель для волос <span>«American Crew»</span></a>
 							<section class="buy-block">
 								<div class="price">300 руб.</div>
 								<a href="#" class="btn">Купить</a>
-							</section> -->
+							</section>
 						</article>
 						<article class="shop-item">
-<!-- 							<img src="img/shop-item-preview-6.jpg" width="220" height="165" alt="Набор для бритья"> 
-							<p class="item-name">Набор для бритья <span>«Baxter of California»</span></p>
+							<a href="#">
+								<img src="img/shop-item-preview-6.jpg" width="220" height="165" alt="Набор для бритья"> 								
+							</a>
+							<a class="item-name" href="#">Набор для бритья <span>«Baxter of California»</span></a>
 							<section class="buy-block">
 								<div class="price">3 900 руб.</div>
 								<a href="#" class="btn">Купить</a>
-							</section> -->
+							</section>
 						</article>
 					</section>
 					<section class="pagination">
-<!-- 						<ul>
+						<ul>
 							<li>
 								<a href="#">1</a>
 							</li>
@@ -143,7 +155,7 @@
 							<li>
 								<a href="#">4</a>
 							</li>
-						</ul> -->
+						</ul>
 					</section>  
 				</div>  
 			</div>	
@@ -151,20 +163,20 @@
 		<footer class="main-footer">
 			<div class="container clearfix">
 				<section class="footer-contacts">
-<!-- 					Барбершоп «Бородинский»<br>
+					Барбершоп «Бородинский»<br>
 					Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
 					<a href="#">Как нас найти?</a><br>
-					Телефон: +7 (812) 666-02-66 -->
+					Телефон: +7 (812) 666-02-66
 				</section>
 				<section class="footer-social">
-<!-- 					<p>Давайте дружить!</p>
+					<p>Давайте дружить!</p>
 					<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
 					<a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-					<a class="social-btn social-btn-inst" href="#">Инстаграм</a> -->
+					<a class="social-btn social-btn-inst" href="#">Инстаграм</a>
 				</section>
 				<section class="footer-copyright">
-<!-- 					<p>Разработано:</p>
-					<a class="btn" href="https://htmlacademy.ru">HTML Academy</a> -->
+					<p>Разработано:</p>
+					<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
 				</section>
 			</div>
 		</footer> 
