--- a/catalogue-item.html
+++ b/catalogue-item.html
@@ -3,17 +3,19 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Барбершоп «Бородинский»</title>
+		<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
+		<link href="css/normalize.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header">
 			<div class="container clearfix">
-				<div class="inner-logo">
+				<div class="main-header-logo">
 					<a href="index.html">
 						<img src="img/logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
 					</a>
 				</div>
-				<nav class="main-navigation">
+				<nav class="main-header-navigation">
 					<ul>
 						<li>
 							<a href="#">Информация</a>
@@ -32,30 +34,28 @@
 						</li>
 					</ul>
 				</nav>
-				<div class="user-block">
+				<div class="main-header-user-block">
 					<a class="login" href="#">Вход</a>
 				</div>
 			</div>
 		</header>
 		<main class="container clearfix">
-			<header class="inner-page-header">  
+			<header class="inner-header">  
 				<h1>Набор для путешествий «Baxter of California»</h1>
-				<div class="breadcrumbs">
-					<ul>
-						<li>
-							<a href="#">Главная</a>
-						</li>
-						<li>
-							<a href="#">Магазин</a>
-						</li>
-						<li>
-							<a href="catalogue.html">Средства для ухода</a>
-						</li>
-						<li>
-							Набор для путешествий «Baxter of California»
-						</li>
-					</ul>
-				</div>
+				<ul class="inner-header-breadcrumbs">
+					<li>
+						<a href="#">Главная</a>
+					</li>
+					<li>
+						<a href="#">Магазин</a>
+					</li>
+					<li>
+						<a href="catalogue.html">Средства для ухода</a>
+					</li>
+					<li>
+						Набор для путешествий «Baxter of California»
+					</li>
+				</ul>
 			</header>
 			<div class="page-content">
 				<div class="item-photo-gallery">
@@ -68,16 +68,18 @@
 				</div>
 				<div class="item-main-block">
 					<section class="description">
-						<div class="availability">Есть в наличии</div>
-						<div class="articul">Артикул: dexter-ae</div>
+						<header class="clearfix">
+							<div class="availability">Есть в наличии</div>
+							<div class="articul">Артикул: dexter-ae</div>
+						</header>
 						<p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
 					</section>
-					<section class="buy-block">
+					<section class="buy-block clearfix">
 						<div class="price">2 900 руб.</div>
-						<a href="#" class="btn">Купить</a>
+						<a class="btn" href="#">Купить</a>
 					</section>
 					<section class="set-parts">
-						<p>В набор входят:</p>
+						<p class="title">В набор входят:</p>
 						<ul>
 							<li>Средство для умывания (50 мл)</li>
 							<li>Увлажняющий крем (50 мл)</li>
@@ -91,19 +93,19 @@
 		</main>
 		<footer class="main-footer">
 			<div class="container clearfix">
-				<section class="footer-contacts">
+				<section class="main-footer-contacts">
 					Барбершоп «Бородинский»<br>
 					Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
 					<a href="#">Как нас найти?</a><br>
 					Телефон: +7 (812) 666-02-66
 				</section>
-				<section class="footer-social">
+				<section class="main-footer-social">
 					<p>Давайте дружить!</p>
 					<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
 					<a class="social-btn social-btn-fb" href="#">Фейсбук</a>
 					<a class="social-btn social-btn-inst" href="#">Инстаграм</a>
 				</section>
-				<section class="footer-copyright">
+				<section class="main-footer-copyright">
 					<p>Разработано:</p>
 					<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
 				</section>
