--- a/catalogue.html
+++ b/catalogue.html
@@ -3,17 +3,19 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Барбершоп «Бородинский»</title>
+		<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
+		<link href="css/normalize.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header">
 			<div class="container clearfix">
-				<div class="inner-logo">
+				<div class="main-header-logo">
 					<a href="index.html">
 						<img src="img/logo.png" width="111" height="24" alt="Барбершоп «Бородинский»">
 					</a>
 				</div>
-				<nav class="main-navigation">
+				<nav class="main-header-navigation">
 					<ul>
 						<li>
 							<a href="#">Информация</a>
@@ -32,15 +34,15 @@
 						</li>
 					</ul>
 				</nav>
-				<div class="user-block">
+				<div class="main-header-user-block">
 					<a class="login" href="#">Вход</a>
 				</div>
 			</div>
 		</header>
 		<main class="container">
-			<header class="inner-page-header">  
+			<header class="inner-header">  
 				<h1>Средства для ухода</h1>
-				<ul class="breadcrumbs">
+				<ul class="inner-header-breadcrumbs">
 					<li>
 						<a href="#">Главная</a>
 					</li>
@@ -52,10 +54,10 @@
 					</li>
 				</ul>
 			</header>
-			<div class="page-content clearfix">
-				<div class="page-content-left">
+			<div class="inner-content clearfix">
+				<aside class="inner-content-left">
 					<div class="filters">
-						<form action="shop.html" method="post">
+						<form action="http://echo.htmlacademy.ru" method="post">
 							<fieldset>
 								<legend>Производители:</legend>
 								<input type="checkbox" id="baxter-field" name="baxter" checked>
@@ -68,76 +70,76 @@
 								<label for="malin-field">Malin+Goetz</label>
 								<input type="checkbox" id="murrays-field" name="murrays">
 								<label for="murrays-field">Murray's</label>
-								<input type="checkbox" id="americancrew-field" name="americancrew" checked>
+								<input type="checkbox" id="americancrew-field" name="americancrew" disabled>
 								<label for="americancrew-field">American Crew</label>	
 							</fieldset>
 							<fieldset>
 								<legend>Группы товаров:</legend>
 							</fieldset>
-							<button type="submit">Показать</button>
+							<button class="btn" type="submit">Показать</button>
 						</form>	
 					</div>
-				</div>
-				<div class="page-content-right">
+				</aside>
+				<div class="inner-content-right">
 					<section class="shop-list clearfix">
-						<article class="shop-item">
+						<article class="shop-list-item">
 							<a href="#">
 								<img src="img/shop-item-preview-1.jpg" width="220" height="165" alt="Набор для путешествий"> 
 							</a>
-							<a class="item-name" href="#">Набор для путешествий <span>«Baxter of California»</span></a>
-							<section class="buy-block">
+							<a class="shop-list-item-name" href="#">Набор для путешествий <span>«Baxter of California»</span></a>
+							<section class="buy-block clearfix">
 								<div class="price">2 900 руб.</div>
-								<a href="#" class="btn">Купить</a>
+								<a class="btn" href="#">Купить</a>
 							</section>
 						</article>
-						<article class="shop-item">
+						<article class="shop-list-item">
 							<a href="#">
 								<img src="img/shop-item-preview-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер"> 	
 							</a>
-							<a class="item-name" href="#">Увлажняющий кондиционер <span>«Baxter of California»</span></a>
-							<section class="buy-block">
+							<a class="shop-list-item-name" href="#">Увлажняющий кондиционер <span>«Baxter of California»</span></a>
+							<section class="buy-block clearfix">
 								<div class="price">750 руб.</div>
-								<a href="#" class="btn">Купить</a>
+								<a class="btn" href="#">Купить</a>
 							</section>
 						</article>
-						<article class="shop-item">
+						<article class="shop-list-item">
 							<a href="#">
 								<img src="img/shop-item-preview-3.jpg" width="220" height="165" alt="Гель для волос"> 								
 							</a>
-							<a class="item-name" href="#">Гель для волос <span>«Suavecito»</span></a>
-							<section class="buy-block">
+							<a class="shop-list-item-name" href="#">Гель для волос <span>«Suavecito»</span></a>
+							<section class="buy-block clearfix">
 								<div class="price">290 руб.</div>
-								<a href="#" class="btn">Купить</a>
+								<a class="btn" href="#">Купить</a>
 							</section>
 						</article>
-						<article class="shop-item">
+						<article class="shop-list-item">
 							<a href="#">
 								<img src="img/shop-item-preview-4.jpg" width="220" height="165" alt="Глина для укладки волос"> 								
 							</a>
-							<a class="item-name" href="#">Глина для укладки волос <span>«American Crew»</span></a>
-							<section class="buy-block">
+							<a class="shop-list-item-name" href="#">Глина для укладки волос <span>«American Crew»</span></a>
+							<section class="buy-block clearfix">
 								<div class="price">500 руб.</div>
-								<a href="#" class="btn">Купить</a>
+								<a class="btn" href="#">Купить</a>
 							</section>
 						</article>
-						<article class="shop-item">
+						<article class="shop-list-item">
 							<a href="#">
 								<img src="img/shop-item-preview-5.jpg" width="220" height="165" alt="Гель для волос"> 								
 							</a>
-							<a class="item-name" href="#">Гель для волос <span>«American Crew»</span></a>
-							<section class="buy-block">
+							<a class="shop-list-item-name" href="#">Гель для волос <span>«American Crew»</span></a>
+							<section class="buy-block clearfix">
 								<div class="price">300 руб.</div>
-								<a href="#" class="btn">Купить</a>
+								<a class="btn" href="#">Купить</a>
 							</section>
 						</article>
-						<article class="shop-item">
+						<article class="shop-list-item">
 							<a href="#">
 								<img src="img/shop-item-preview-6.jpg" width="220" height="165" alt="Набор для бритья"> 								
 							</a>
-							<a class="item-name" href="#">Набор для бритья <span>«Baxter of California»</span></a>
-							<section class="buy-block">
+							<a class="shop-list-item-name" href="#">Набор для бритья <span>«Baxter of California»</span></a>
+							<section class="buy-block clearfix">
 								<div class="price">3 900 руб.</div>
-								<a href="#" class="btn">Купить</a>
+								<a class="btn" href="#">Купить</a>
 							</section>
 						</article>
 					</section>
@@ -146,9 +148,7 @@
 							<li>
 								<a href="#">1</a>
 							</li>
-							<li>
-								<a class="current" href="#">2</a>
-							</li>
+							<li class="current">2</li>
 							<li>
 								<a href="#">3</a>
 							</li>
@@ -162,19 +162,19 @@
 		</main>
 		<footer class="main-footer">
 			<div class="container clearfix">
-				<section class="footer-contacts">
+				<section class="main-footer-contacts">
 					Барбершоп «Бородинский»<br>
 					Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
 					<a href="#">Как нас найти?</a><br>
 					Телефон: +7 (812) 666-02-66
 				</section>
-				<section class="footer-social">
+				<section class="main-footer-social">
 					<p>Давайте дружить!</p>
 					<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
 					<a class="social-btn social-btn-fb" href="#">Фейсбук</a>
 					<a class="social-btn social-btn-inst" href="#">Инстаграм</a>
 				</section>
-				<section class="footer-copyright">
+				<section class="main-footer-copyright">
 					<p>Разработано:</p>
 					<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
 				</section>
