--- a/catalogue.html
+++ b/catalogue.html
@@ -7,7 +7,7 @@
 		<link href="css/normalize.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 	</head>
-	<body>
+	<body class="catalogue-page-">
 		<header class="main-header">
 			<div class="container clearfix">
 				<div class="main-header-logo">
@@ -70,93 +70,102 @@
 								<label for="malin-field">Malin+Goetz</label>
 								<input type="checkbox" id="murrays-field" name="murrays">
 								<label for="murrays-field">Murray's</label>
-								<input type="checkbox" id="americancrew-field" name="americancrew" disabled>
+								<input type="checkbox" id="americancrew-field" name="americancrew" checked disabled>
 								<label for="americancrew-field">American Crew</label>	
 							</fieldset>
 							<fieldset>
 								<legend>Группы товаров:</legend>
+								<input type="radio" id="crem-field" name="group" value="crem" checked>
+								<label for="crem-field">Крема</label>
+								<input type="radio" id="shampoo-field" name="group" value="shampoo">
+								<label for="shampoo-field">Шампуни</label>
+								<input type="radio" id="scrub-field" name="group" value="scrub" disabled>
+								<label for="scrub-field">Скрабы и гели</label>
 							</fieldset>
 							<button class="btn" type="submit">Показать</button>
 						</form>	
 					</div>
 				</aside>
 				<div class="inner-content-right">
-					<section class="shop-list clearfix">
-						<article class="shop-list-item">
-							<a href="#">
-								<img src="img/shop-item-preview-1.jpg" width="220" height="165" alt="Набор для путешествий"> 
-							</a>
-							<a class="shop-list-item-name" href="#">Набор для путешествий <span>«Baxter of California»</span></a>
-							<section class="buy-block clearfix">
-								<div class="price">2 900 руб.</div>
-								<a class="btn" href="#">Купить</a>
-							</section>
-						</article>
-						<article class="shop-list-item">
-							<a href="#">
-								<img src="img/shop-item-preview-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер"> 	
-							</a>
-							<a class="shop-list-item-name" href="#">Увлажняющий кондиционер <span>«Baxter of California»</span></a>
-							<section class="buy-block clearfix">
-								<div class="price">750 руб.</div>
-								<a class="btn" href="#">Купить</a>
-							</section>
-						</article>
-						<article class="shop-list-item">
-							<a href="#">
-								<img src="img/shop-item-preview-3.jpg" width="220" height="165" alt="Гель для волос"> 								
-							</a>
-							<a class="shop-list-item-name" href="#">Гель для волос <span>«Suavecito»</span></a>
-							<section class="buy-block clearfix">
-								<div class="price">290 руб.</div>
-								<a class="btn" href="#">Купить</a>
-							</section>
-						</article>
-						<article class="shop-list-item">
-							<a href="#">
-								<img src="img/shop-item-preview-4.jpg" width="220" height="165" alt="Глина для укладки волос"> 								
-							</a>
-							<a class="shop-list-item-name" href="#">Глина для укладки волос <span>«American Crew»</span></a>
-							<section class="buy-block clearfix">
-								<div class="price">500 руб.</div>
-								<a class="btn" href="#">Купить</a>
-							</section>
-						</article>
-						<article class="shop-list-item">
-							<a href="#">
-								<img src="img/shop-item-preview-5.jpg" width="220" height="165" alt="Гель для волос"> 								
-							</a>
-							<a class="shop-list-item-name" href="#">Гель для волос <span>«American Crew»</span></a>
-							<section class="buy-block clearfix">
-								<div class="price">300 руб.</div>
-								<a class="btn" href="#">Купить</a>
-							</section>
-						</article>
-						<article class="shop-list-item">
-							<a href="#">
-								<img src="img/shop-item-preview-6.jpg" width="220" height="165" alt="Набор для бритья"> 								
-							</a>
-							<a class="shop-list-item-name" href="#">Набор для бритья <span>«Baxter of California»</span></a>
-							<section class="buy-block clearfix">
-								<div class="price">3 900 руб.</div>
-								<a class="btn" href="#">Купить</a>
-							</section>
-						</article>
-					</section>
-					<section class="pagination">
-						<ul>
-							<li>
-								<a href="#">1</a>
-							</li>
-							<li class="current">2</li>
-							<li>
-								<a href="#">3</a>
-							</li>
-							<li>
-								<a href="#">4</a>
-							</li>
-						</ul>
-					</section>  
+					<!-- Чтобы левая колонка не толкала пагинацию -->
+					<div class="ignore-left-column-height">
+						<section class="shop-list clearfix">
+							<article class="shop-list-item">
+								<a href="#">
+									<img src="img/shop-item-preview-1.jpg" width="220" height="165" alt="Набор для путешествий"> 
+								</a>
+								<a class="shop-list-item-name" href="#">Набор для путешествий <span>«Baxter of California»</span></a>
+								<section class="buy-block clearfix">
+									<div class="price">2 900 руб.</div>
+									<a class="btn" href="#">Купить</a>
+								</section>
+							</article>
+							<article class="shop-list-item">
+								<a href="#">
+									<img src="img/shop-item-preview-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер"> 	
+								</a>
+								<a class="shop-list-item-name" href="#">Увлажняющий кондиционер <span>«Baxter of California»</span></a>
+								<section class="buy-block clearfix">
+									<div class="price">750 руб.</div>
+									<a class="btn" href="#">Купить</a>
+								</section>
+							</article>
+							<article class="shop-list-item">
+								<a href="#">
+									<img src="img/shop-item-preview-3.jpg" width="220" height="165" alt="Гель для волос"> 								
+								</a>
+								<a class="shop-list-item-name" href="#">Гель для волос <span>«Suavecito»</span></a>
+								<section class="buy-block clearfix">
+									<div class="price">290 руб.</div>
+									<a class="btn" href="#">Купить</a>
+								</section>
+							</article>
+							<article class="shop-list-item">
+								<a href="#">
+									<img src="img/shop-item-preview-4.jpg" width="220" height="165" alt="Глина для укладки волос"> 								
+								</a>
+								<a class="shop-list-item-name" href="#">Глина для укладки волос <span>«American Crew»</span></a>
+								<section class="buy-block clearfix">
+									<div class="price">500 руб.</div>
+									<a class="btn" href="#">Купить</a>
+								</section>
+							</article>
+							<article class="shop-list-item">
+								<a href="#">
+									<img src="img/shop-item-preview-5.jpg" width="220" height="165" alt="Гель для волос"> 								
+								</a>
+								<a class="shop-list-item-name" href="#">Гель для волос <span>«American Crew»</span></a>
+								<section class="buy-block clearfix">
+									<div class="price">300 руб.</div>
+									<a class="btn" href="#">Купить</a>
+								</section>
+							</article>
+							<article class="shop-list-item">
+								<a href="#">
+									<img src="img/shop-item-preview-6.jpg" width="220" height="165" alt="Набор для бритья"> 								
+								</a>
+								<a class="shop-list-item-name" href="#">Набор для бритья <span>«Baxter of California»</span></a>
+								<section class="buy-block clearfix">
+									<div class="price">3 900 руб.</div>
+									<a class="btn" href="#">Купить</a>
+								</section>
+							</article>
+						</section>
+						<section class="pagination">
+							<ul>
+								<li>
+									<a href="#">1</a>
+								</li>
+								<li class="current">2</li>
+								<li>
+									<a href="#">3</a>
+								</li>
+								<li>
+									<a href="#">4</a>
+								</li>
+							</ul>
+						</section>  
+					</div>
 				</div>  
 			</div>	
 		</main>
